Integrate pmd to support range of languages (#13)
* First commit

* Visual force