@@ -14,6 +14,8 @@ ENV GOSEC_VERSION=2.2.0 \
     MAVEN_VERSION=3.6.3 \
     MAVEN_HOME=/opt/apache-maven-${MAVEN_VERSION} \
     SC_VERSION=2019.2.3 \
+    PMD_VERSION=6.22.0 \
+    PMD_CMD="/opt/pmd-bin-${PMD_VERSION}/bin/run.sh pmd" \
     JQ_VERSION=1.6 \
     FSB_VERSION=1.10.1 \
     FB_CONTRIB_VERSION=7.4.7 \
@@ -52,6 +54,9 @@ RUN curl -L "https://github.com/zricethezav/gitleaks/releases/download/v${GITLEA
     && rm shellcheck-stable.linux.x86_64.tar.xz
 RUN curl -L "https://github.com/zegl/kube-score/releases/download/v${KUBE_SCORE_VERSION}/kube-score_${KUBE_SCORE_VERSION}_linux_amd64" -o "/usr/local/bin/shiftleft/kube-score" \
     && chmod +x /usr/local/bin/shiftleft/kube-score \
+    && wget "https://github.com/pmd/pmd/releases/download/pmd_releases%2F${PMD_VERSION}/pmd-bin-${PMD_VERSION}.zip" \
+    && unzip -q pmd-bin-${PMD_VERSION}.zip -d /opt/ \
+    && rm pmd-bin-${PMD_VERSION}.zip \
     && curl -L "https://github.com/stedolan/jq/releases/download/jq-${JQ_VERSION}/jq-linux64" -o "/usr/local/bin/shiftleft/jq" \
     && chmod +x /usr/local/bin/shiftleft/jq
 RUN curl -L "https://github.com/arturbosch/detekt/releases/download/${DETEKT_VERSION}/detekt-cli-${DETEKT_VERSION}-all.jar" -o "/usr/local/bin/shiftleft/detekt-cli.jar" \
@@ -84,7 +89,10 @@ LABEL maintainer="ShiftLeftSecurity" \
 ENV APP_SRC_DIR=/usr/local/src \
     DEPSCAN_CMD="/usr/local/bin/depscan" \
     MVN_CMD="/opt/apache-maven/bin/mvn" \
+    PMD_CMD="/opt/pmd-bin/bin/run.sh pmd" \
     SB_VERSION=4.0.1 \
+    PMD_VERSION=6.22.0 \
+    PMD_JAVA_OPTS="--enable-preview" \
     SPOTBUGS_HOME=/opt/spotbugs \
     JAVA_HOME=/usr/lib/jvm/java-11-openjdk-11.0.6.10-0.el8_1.x86_64 \
     GRADLE_VERSION=6.0.1 \
@@ -102,9 +110,11 @@ COPY --from=builder /usr/local/bin/puppet-lint /usr/local/bin/puppet-lint
 COPY --from=builder /usr/local/bin/cyclonedx-ruby /usr/local/bin/cyclonedx-ruby
 COPY --from=builder /opt/app-root/src/.cargo/bin /opt/.cargo/bin
 COPY spotbugs /usr/local/src/spotbugs
+COPY --from=builder /opt/pmd-bin-${PMD_VERSION} /opt/pmd-bin
 COPY --from=builder /opt/spotbugs-${SB_VERSION} /opt/spotbugs
 COPY --from=builder /opt/gradle-${GRADLE_VERSION} /opt/gradle
 COPY --from=builder /opt/apache-maven-${MAVEN_VERSION} /opt/apache-maven
+COPY rules-pmd.xml /usr/local/src/
 
 COPY requirements.txt /usr/local/src/
 
